--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,16 @@
   --bool-detail:#008000;
 }
 
+.d-flex{
+  display: flex;
+}
+
+.container{
+  width: 1380px;
+  margin: auto;
+}
+
+header{
+  background-color: var(--bool-primary);
+  height: 74px;
+}
