--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,16 @@ a {
   --bool-detail: #008000;
 }
 
+.details{
+  background-color: var(--bool-detail);
+  padding: 0.5rem 1rem;
+}
+
+.discount{
+  background-color: var(--bool-sconti);
+  padding: 0.5rem 1rem;
+}
+
 .d-flex {
   display: flex;
 }
@@ -32,6 +42,7 @@ a {
   width: 1380px;
   margin: auto;
 }
+
 
 /* #endregion utilities */
 
@@ -81,6 +92,7 @@ section {
 .card {
 
   margin-bottom: 2rem;
+  position: relative;
 
   img {
     width: 447px;
@@ -97,6 +109,19 @@ section {
     margin-left: 2px;
     text-decoration: line-through;
   }
+
+  
+  .tag{
+    color: white;
+    font-weight: 800;
+    text-align: center;
+    position: absolute;
+    bottom: 120px;
+    left: 0;
+    gap: 1rem;
+  }
+
+  
 
 }
 
