add bonus 2 heart hover red

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,10 @@ section {
     right: 0;
     top: 1rem;
     z-index: +1;
+
+    .fa-heart:hover{
+      color: red;
+    }
   }
 
   .hover-pic {
